[tool.poetry]
name = "pytest-bdd-sample"
version = "0.1.0"
description = ""
authors = ["Robert Bradley <rbradaws@amazon.co.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.5"
pytest-bdd = "^8.1.0"
selenium = "^4.30.0"
pyhamcrest = "^2.1.0"
pytest-xdist = "^3.6.1"
coverage = "^7.8.2"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
